# framepipe

./: CMakeLists.txt  readme.md
include/: capture.h  frame.h  image.h  pipeline.h  process.h  ring_buffer.h  shared_state.h
include/transforms/: gaussian_blur.h  grayscale.h  image_transform.h  sobel.h  threshold.h
src/: image.cpp  main.cpp  pipeline.cpp
src/transforms/: gaussian_blur.cpp  grayscale.cpp  sobel.cpp  threshold.cpp
tests/: ring_buffer_test.cpp
